Fixes property selector popup widget

--- a/django_admin_json_editor/static/django_admin_json_editor/style.css
+++ b/django_admin_json_editor/static/django_admin_json_editor/style.css
@@ -9,3 +9,11 @@ div.sceditor-container {
     width: 100% !important;
     margin-bottom: 10px;
 }
+
+/*Fixes for property selector*/
+.property-selector label {
+    float: none;
+}
+.property-selector .form-check-label:after {
+    display: none  !important;
+}
